# AISDK

./: CMakeLists.txt  aisdk.pc  am113.readme  readme
AICommon/: CMakeLists.txt
AICommon/DMInterface/include/DMInterface/: DomainHandlerInterface.h  DomainHandlerResultInterface.h  DomainSequencerInterface.h  KeyWordObserverInterface.h  MessageConsumerInterface.h  MessageObserverInterface.h  SpeechSynthesizerObserverInterface.h
AICommon/Utils/include/Utils/: AudioFormat.h  DeviceInfo.h  HTTPContent.h  SafeShutdown.h
AICommon/Utils/include/Utils/Attachment/: Attachment.h  AttachmentManager.h  AttachmentManagerInterface.h  AttachmentReader.h  AttachmentWriter.h  InProcessAttachment.h  InProcessAttachmentReader.h  InProcessAttachmentWriter.h
AICommon/Utils/include/Utils/Channel/: AudioTrackManagerInterface.h  AudioTrackManagerObserverInterface.h  ChannelObserverInterface.h  FocusState.h
AICommon/Utils/include/Utils/DialogRelay/: DialogUXStateObserverInterface.h  DialogUXStateRelay.h
AICommon/Utils/include/Utils/LibcurlUtils/: CurlEasyHandleWrapper.h  CurlMultiHandleWrapper.h  HTTPContentFetcherFactory.h  HttpResponseCodes.h  LibCurlHttpContentFetcher.h
AICommon/Utils/include/Utils/Logging/: ConsoleLogger.h  Level.h  LogEntry.h  LogEntryBuffer.h  LogEntryStream.h  LogStringFormatter.h  Logger.h  SafeCTimeAccess.h  ThreadMoniker.h
AICommon/Utils/include/Utils/MediaPlayer/: ErrorTypes.h  MediaPlayerInterface.h  MediaPlayerObserverInterface.h
AICommon/Utils/include/Utils/Microphone/: MicrophoneInterface.h
AICommon/Utils/include/Utils/PlaylistParser/: IterativePlaylistParserInterface.h  PlaylistParserObserverInterface.h
AICommon/Utils/include/Utils/SharedBuffer/: BufferLayout.h  Reader.h  ReaderPolicy.h  SharedBuffer.h  Writer.h  WriterPolicy.h
AICommon/Utils/include/Utils/SoundAi/: SoundAiObserverInterface.h
AICommon/Utils/include/Utils/Threading/: Executor.h  Memory.h  TaskQueue.h  TaskThread.h
AICommon/Utils/src/: DeviceInfo.cpp  Executor.cpp  SafeShutdown.cpp  TaskQueue.cpp  TaskThread.cpp
AICommon/Utils/src/Attachment/: Attachment.cpp  AttachmentManager.cpp  InProcessAttachment.cpp  InProcessAttachmentReader.cpp  InProcessAttachmentWriter.cpp
AICommon/Utils/src/DialogRelay/: DialogUXStateRelay.cpp
AICommon/Utils/src/LibcurlUtils/: CurlEasyHandleWrapper.cpp  CurlMultiHandleWrapper.cpp  HTTPContentFetcherFactory.cpp  LibCurlHttpContentFetcher.cpp
AICommon/Utils/src/Logging/: CMakeLists.txt  ConsoleLogger.cpp  Level.cpp  LogEntry.cpp  LogEntryBuffer.cpp  LogEntryStream.cpp  LogStringFormatter.cpp  Logger.cpp  SafeCTimeAccess.cpp  ThreadMoniker.cpp
AICommon/Utils/src/SharedBuffer/: BufferLayout.cpp  Reader.cpp  SharedBuffer.cpp  Writer.cpp
ASR/: CMakeLists.txt
ASR/AIUI/: CMakeLists.txt
ASR/AIUI/include/AIUI/: AIUIASRListener.h  AIUIASRListenerObserverInterface.h  AIUIAutomaticSpeechRecognizer.h  FileUtil.h
ASR/AIUI/src/: AIUIASRListener.cpp  AIUIAutomaticSpeechRecognizer.cpp  FileUtil.cpp
ASR/SoundAi/: CMakeLists.txt
ASR/SoundAi/include/SoundAi/: MessageConsumer.h  NetEventTypes.h  SoundAiAutomaticSpeechRecognizer.h  SoundAiEngine.h
ASR/SoundAi/src/: CMakeLists.txt  MessageConsumer.cpp  SoundAiAutomaticSpeechRecognizer.cpp  SoundAiEngine.cpp
ASR/SoundAi/test/: CMakeLists.txt  SoundAiEngineTest.cpp
ASR/include/ASR/: ASRTimer.h  AutomaticSpeechRecognizerConfiguration.h  AutomaticSpeechRecognizerRegister.h  GenericAutomaticSpeechRecognizer.h  MessageConsumer.h
ASR/src/: ASRTimer.cpp  AutomaticSpeechRecognizerRegister.cpp  CMakeLists.txt  GenericAutomaticSpeechRecognizer.cpp  MessageConsumer.cpp
ATM/: CMakeLists.txt
ATM/AudioTrackManager/: CMakeLists.txt
ATM/AudioTrackManager/include/AudioTrackManager/: AudioTrackManager.h  Channel.h
ATM/AudioTrackManager/src/: AudioTrackManager.cpp  CMakeLists.txt  Channel.cpp
Application/: CMakeLists.txt
Application/MicrophoneTEST/: CMakeLists.txt  MicroPhoneTest.cpp
Application/include/Application/: AIClient.h  Client - 副本.h  ControlActionManager.h  KeywordObserver.h  SampleApp.h  UIManager.h
Application/src/: AIClient.cpp  CMakeLists.txt  ControlActionManager.cpp  KeywordObserver.cpp  Main.cpp  PortAudioMicrophoneWrapper.cpp  SampleApp.cpp  UIManager.cpp
Domain/: CMakeLists.txt
Domain/SpeechSynthesizer/: CMakeLists.txt
Domain/SpeechSynthesizer/src/: CMakeLists.txt  SpeechSynthesizer.cpp
KWD/: CMakeLists.txt
KWD/IflyTek/include/: IflyTekKeywordDetector.h
KWD/IflyTek/src/: CMakeLists.txt  IflyTekKeywordDetector.cpp
KWD/SoundAi/: CMakeLists.txt
KWD/SoundAi/src/: CMakeLists.txt  KeywordDetector.cpp
KWD/include/KWD/: GenericKeywordDetector.h  KeywordDetectorRegister.h
KWD/src/: CMakeLists.txt  GenericKeywordDetector.cpp  KeywordDetectorRegister.cpp
MediaPlayer/: CMakeLists.txt
MediaPlayer/AudioMediaPlayer/: CMakeLists.txt
MediaPlayer/AudioMediaPlayer/src/: AOEngine.cpp  AOWrapper.cpp  CMakeLists.txt  FFmpegAttachmentInputController.cpp  FFmpegDecoder.cpp  FFmpegDeleter.cpp  FFmpegStreamInputController.cpp  FFmpegUrlInputController.cpp  PlaybackConfiguration.cpp  RetryTimer.cpp  readme
MediaPlayer/AudioMediaPlayer/test/: AOWrapperTest.cpp  CMakeLists.txt  PaWrapperTest.cpp-bk  PaWrapperTest.cpp-fix
Microphone/: CMakeLists.txt
Microphone/MicrophoneTEST/: CMakeLists.txt  MicroPhoneTest.cpp  PortAudioMicrophoneWrapper.cpp
Microphone/include/: PortAudioMicrophoneWrapper.h
NLP/: CMakeLists.txt
NLP/include/NLP/: DomainProcessor.h  DomainProxy.h  DomainRouter.h  DomainSequencer.h  MessageInterpreter.h  NLPDomain.h  NLPMessage.h
NLP/src/: CMakeLists.txt  DomainProcessor.cpp  DomainProxy.cpp  DomainRouter.cpp  DomainSequencer.cpp  MessageInterpreter.cpp  NLPDomain.cpp  NLPMessage.cpp
PlaylistParser/: CMakeLists.txt
PlaylistParser/include/PlaylistParser/: IterativePlaylistParser.h  PlaylistUtils.h
PlaylistParser/src/: CMakeLists.txt  IterativePlaylistParser.cpp  PlaylistUtils.cpp
ThirdLibrary/: CMakeLists.txt
ThirdLibrary/Iflytek/: CMakeLists.txt
ThirdLibrary/SoundAi/: CMakeLists.txt
ThirdLibrary/SoundAi/include/: sai_sdk.h
(+19 files in other folders)
